Align items in the theme settings correctly.

--- a/.config/ags/style/VerdantDark/main.css
+++ b/.config/ags/style/VerdantDark/main.css
@@ -1680,37 +1680,103 @@ switch:checked slider {
 }
 
 .mode-settings__button_left {
-  background-color: #433D42;
+  font-size: 18px;
+  font-weight: normal;
+  padding-left: 16px;
+  padding-right: 16px;
+  min-height: 42px;
+  background: #433D42;
+  color: #F5CCED;
+  box-shadow: 0 0 0 transparent, 0 0 0 transparent;
+  font-family: "Open sans";
+  transition: all 0.2s cubic-bezier(0.85, 0, 0.15, 1);
+  margin-right: 5px;
+  margin-left: 5px;
+  border: none;
+  background-size: 8px 8px;
+  border-radius: 8px;
   margin-right: 10px;
   min-width: 160px;
   padding-left: 0;
   padding-right: 0;
 }
 .mode-settings__button_left.hover {
-  background-color: #433D42;
-  transition: background 0.2s cubic-bezier(0.85, 0, 0.15, 1);
+  background-size: 8px 8px;
+  background-image: linear-gradient(45deg, #E012BA 25%, #E012BA 25%, #E012BA 50%, #E012BA 50%, #E012BA 75%, #E012BA 75%, #E012BA);
+  text-shadow: 2px 2px 0 #E012BA, 2px -2px 0 #E012BA, -2px 2px 0 #E012BA, -2px -2px 0 #E012BA, 2px 0px 0 #E012BA, 0px 2px 0 #E012BA, -2px 0px 0 #E012BA, 0px -2px 0 #E012BA;
+  box-shadow: 0 0 0 transparent, 0 0 0 transparent;
 }
 .mode-settings__button_left.active {
-  background-color: #E012BA;
+  font-size: 18px;
+  font-weight: normal;
+  padding-left: 16px;
+  padding-right: 16px;
+  min-height: 42px;
+  background: linear-gradient(45deg, #E012BA 25%, #E012BA 25%, #E012BA 50%, #E012BA 50%, #E012BA 75%, #E012BA 75%, #E012BA);
+  color: #F5CCED;
+  box-shadow: 0 0 0 transparent, 0 0 0 transparent;
+  font-family: "Open sans";
   transition: background 0.2s cubic-bezier(0.85, 0, 0.15, 1);
-  background-color: red;
+  margin-right: 5px;
+  margin-left: 5px;
+  border: none;
+  background-size: 8px 8px;
+  border-radius: 8px;
+  text-shadow: 2px 2px 0 #E012BA, 2px -2px 0 #E012BA, -2px 2px 0 #E012BA, -2px -2px 0 #E012BA, 2px 0px 0 #E012BA, 0px 2px 0 #E012BA, -2px 0px 0 #E012BA, 0px -2px 0 #E012BA;
+  margin-right: 10px;
+  min-width: 160px;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .mode-settings__button_right {
-  background-color: #433D42;
+  font-size: 18px;
+  font-weight: normal;
+  padding-left: 16px;
+  padding-right: 16px;
+  min-height: 42px;
+  background: #433D42;
+  color: #F5CCED;
+  box-shadow: 0 0 0 transparent, 0 0 0 transparent;
+  font-family: "Open sans";
+  transition: all 0.2s cubic-bezier(0.85, 0, 0.15, 1);
+  margin-right: 5px;
+  margin-left: 5px;
+  border: none;
+  background-size: 8px 8px;
+  border-radius: 8px;
   margin-left: 10px;
   min-width: 160px;
   padding-left: 0;
   padding-right: 0;
 }
 .mode-settings__button_right.hover {
-  background-color: #433D42;
-  transition: background 0.2s cubic-bezier(0.85, 0, 0.15, 1);
+  background-size: 8px 8px;
+  background-image: linear-gradient(45deg, #E012BA 25%, #E012BA 25%, #E012BA 50%, #E012BA 50%, #E012BA 75%, #E012BA 75%, #E012BA);
+  text-shadow: 2px 2px 0 #E012BA, 2px -2px 0 #E012BA, -2px 2px 0 #E012BA, -2px -2px 0 #E012BA, 2px 0px 0 #E012BA, 0px 2px 0 #E012BA, -2px 0px 0 #E012BA, 0px -2px 0 #E012BA;
+  box-shadow: 0 0 0 transparent, 0 0 0 transparent;
 }
 .mode-settings__button_right.active {
-  background-color: #E012BA;
+  font-size: 18px;
+  font-weight: normal;
+  padding-left: 16px;
+  padding-right: 16px;
+  min-height: 42px;
+  background: linear-gradient(45deg, #E012BA 25%, #E012BA 25%, #E012BA 50%, #E012BA 50%, #E012BA 75%, #E012BA 75%, #E012BA);
+  color: #F5CCED;
+  box-shadow: 0 0 0 transparent, 0 0 0 transparent;
+  font-family: "Open sans";
   transition: background 0.2s cubic-bezier(0.85, 0, 0.15, 1);
-  background-color: red;
+  margin-right: 5px;
+  margin-left: 5px;
+  border: none;
+  background-size: 8px 8px;
+  border-radius: 8px;
+  text-shadow: 2px 2px 0 #E012BA, 2px -2px 0 #E012BA, -2px 2px 0 #E012BA, -2px -2px 0 #E012BA, 2px 0px 0 #E012BA, 0px 2px 0 #E012BA, -2px 0px 0 #E012BA, 0px -2px 0 #E012BA;
+  margin-left: 10px;
+  min-width: 160px;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .theme {
@@ -1994,10 +2060,14 @@ switch:checked slider {
   font-weight: 300;
   box-shadow: 0 0 0 transparent;
   caret-color: #F5CCED;
-  min-width: 0; /* Allows proper shrinking if needed */
-  min-height: 32px; /* Minimum height */
-  padding: 8px; /* Comfortable padding */
-  transition: height 0.2s ease; /* Smooth height expansion */
+  min-width: 0;
+  /* Allows proper shrinking if needed */
+  min-height: 32px;
+  /* Minimum height */
+  padding: 8px;
+  /* Comfortable padding */
+  transition: height 0.2s ease;
+  /* Smooth height expansion */
 }
 
 .message-input.expanded {
